--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <div class="text">
         <span><h1>Neon Inc</h1></span>
-  
+        <a href="https://neon-inc.github.io/search/">Search</a>
 
 
 
